[🐛 Fix] Change header link color to improve readability

--- a/sass/components/_header.sass
+++ b/sass/components/_header.sass
@@ -13,7 +13,7 @@ header
   .left img
       width: 35px
   .right a
-    color: var(--cta-lighter-color)
+    color: var(--cta-normal-color)
     font-weight: 600
     &:not(:last-of-type)::after
       content: "·"
